added drop and drag support
- drop and drag support
- clear text
- improved UI

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       font-family: sans-serif;
       margin: 20px;
     }
-    label {
+    label, legend {
       font-weight: bold;
     }
     input, textarea, select {
@@ -16,7 +16,7 @@
       margin: 10px 0;
       padding: 6px;
       font-size: 1em;
-    }
+    }   
     button {
       padding: 10px 20px;
       font-size: 1em;
@@ -105,16 +105,32 @@
 
   <fieldset style="border-color: blue; margin-bottom: 10px;">
     <legend>Voice Settings:</legend>
-    <label for="modelSelect">Choose Voice Model:</label>
-    <select id="modelSelect">
-      <option disabled selected>Loading models...</option>
-    </select>
-    <button id="previewBtn" disabled>Preview Voice</button>
+    <label for="modelSelect" style="font-weight: normal;">Choose Voice Model:</label>
+    <div style="display: flex; gap: 10px; align-items: center;">
+      <select id="modelSelect" style="flex: 1;">
+        <option disabled selected>Loading models...</option>
+      </select>
+      <button id="previewBtn" disabled>Preview Voice</button>
+    </div>
   </fieldset>
 
-  <p><button id="loadTextFileBtn">Load Text File...</button></p>
+  <div style="display: flex; justify-content: space-between; margin: 10px 0;">
+    <!-- Left-aligned buttons -->
+    <div style="display: flex; gap: 10px;">
+      <button id="loadTextFileBtn">Load Text File...</button>
+      <button id="clearTextBtn">Clear Text</button>
+    </div>
+
+    <!-- Right-aligned button -->
+    <button onclick="resetToDefaults()" style="background-color: #f44; color: white;">Reset to Defaults</button>
+  </div>
+
+  <div id="textDropZone" style="border: 2px dashed #aaa; padding: 10px; margin-bottom: 10px;">
   <label for="textInput">Text to Speak:</label>
+  <div style="margin-right: 20px;">
   <textarea id="textInput" style="height: 300px; overflow: auto;" placeholder="Enter text here..."></textarea>
+  </div>
+  </div>
 
   <label for="outputPath">Output File (optional):</label>
   <div class="inline-group">
@@ -122,9 +138,15 @@
     <button onclick="chooseOutput()">Browse...</button>
   </div>
 
+  <div style="display: flex; justify-content: space-between; margin: 10px 0;">
   <button id="speakButton" onclick="speakText()">Speak</button>
-  <button onclick="resetToDefaults()" style="margin-left: 10px; background-color: #f44; color: white;">Reset to Defaults</button>
-
+  <div id="audioControls" style="display: none; margin-top: 10px;">
+    <button onclick="playAudio()">▶️ Play</button>
+    <button onclick="pauseAudio()">⏸️ Pause</button>
+    <button onclick="resumeAudio()">🔄 Resume</button>
+    <button onclick="stopAudio()">⏹️ Stop</button>
+  </div>
+  </div>
   <p id="status"></p>
   
   <div id="progressContainer" style="display: none; margin-top: 10px;">
@@ -133,13 +155,6 @@
     </div>
     <p id="progressText" style="margin: 4px 0 0; font-size: 0.9em;">0%</p>
     <p id="durationEstimate">Estimated Duration: —</p>
-  </div>
-
-  <div id="audioControls" style="display: none; margin-top: 10px;">
-    <button onclick="playAudio()">▶️ Play</button>
-    <button onclick="pauseAudio()">⏸️ Pause</button>
-    <button onclick="resumeAudio()">🔄 Resume</button>
-    <button onclick="stopAudio()">⏹️ Stop</button>
   </div>
 
 <script>
@@ -211,12 +226,18 @@
   }
 
   async function updateSpeakButtonState() {
-    const isValid = await window.piperAPI.validatePiperPath();
-    document.getElementById('speakButton').disabled = !isValid;
+    const speakButton = document.getElementById('speakButton');
+    const previewBtn = document.getElementById('previewBtn');
+    const modelSelect = document.getElementById('modelSelect');
+    const textArea = document.getElementById('textInput');
 
-    const modelPath = document.getElementById('modelSelect').value;
+    const isValidPiper = await window.piperAPI.validatePiperPath();
+    const modelPath = modelSelect.value;
     const isModelValid = modelPath && await window.piperAPI.validateModelPath(modelPath);
-    document.getElementById('previewBtn').disabled = !isModelValid;
+    const hasText = textArea && textArea.value.trim().length > 0;
+
+    previewBtn.disabled = !isModelValid;
+    speakButton.disabled = !(isValidPiper && isModelValid && hasText);
   }
 
   async function speakText() {
@@ -380,14 +401,21 @@
           const modelPath = document.getElementById('voiceSelect').value;
           const outputPath = 'large-output.wav'; // or generate name
           await window.piperAPI.speakTextFile(result.path, modelPath, outputPath);
-          // new Audio(outputPath).play();
           new Audio(`${outputPath}?t=${Date.now()}`).play();
         }
       } else {
         document.getElementById('textInput').value = result.text;
         updateEstimatedDuration();
+        updateSpeakButtonState();
       }
     });    
+
+    document.getElementById('textInput').addEventListener('input', updateSpeakButtonState);
+
+    document.getElementById('clearTextBtn').addEventListener('click', () => {
+      document.getElementById('textInput').value = '';
+      updateSpeakButtonState();
+    });
 
     // Load saved model directory (if any)
     const modelDir = await window.piperAPI.getModelDirectory();
@@ -411,6 +439,41 @@
         voiceSelect.value = last.lastModel;
       }
     }
+
+    const dropZone = document.getElementById('textDropZone');
+    const textArea = document.getElementById('textInput');
+
+    dropZone.addEventListener('dragover', (event) => {
+      event.preventDefault();
+      dropZone.style.borderColor = 'blue';  // Optional visual feedback
+    });
+
+    dropZone.addEventListener('dragleave', () => {
+      dropZone.style.borderColor = '#aaa';
+    });
+
+    dropZone.addEventListener('drop', async (event) => {
+      event.preventDefault();
+      dropZone.style.borderColor = '#aaa';
+
+      const file = event.dataTransfer.files[0];
+      if (!file || !file.name.endsWith('.txt')) {
+        alert('Only .txt files are supported.');
+        return;
+      }
+
+      if (file.size > 1024 * 1024) { // >1MB
+        alert('File too large to load into the editor. Please use "Load Text File..." instead.');
+        return;
+      }
+
+      const reader = new FileReader();
+      reader.onload = () => {
+        textArea.value = reader.result;
+      };
+      reader.readAsText(file);
+      updateSpeakButtonState();
+    });
   });
 
   // Call on load
